ACTION-1349: Creation of aria-placeholder
Initial commit for group discussion and review

--- a/aria/aria.html
+++ b/aria/aria.html
@@ -6797,6 +6797,7 @@ value), activating the link causes the <a>user agent</a> to navigate to that res
 								<li><pref>aria-activedescendant</pref></li>
 								<li><pref>aria-autocomplete</pref></li>
 								<li><pref>aria-multiline</pref></li>
+								<li><pref>aria-placeholder</pref></li>
 								<li><pref>aria-readonly</pref></li>
 								<li><pref>aria-required</pref></li>
 							</ul>
@@ -7610,6 +7611,7 @@ value), activating the link causes the <a>user agent</a> to navigate to that res
 				<li><pref>aria-multiline</pref></li>
 				<li><pref>aria-multiselectable</pref></li>
 				<li><pref>aria-orientation</pref></li>
+				<li><pref>aria-placeholder</pref></li>
 				<li><sref>aria-pressed</sref></li>
 				<li><pref>aria-readonly</pref></li>
 				<li><pref>aria-required</pref></li>
@@ -9117,6 +9119,48 @@ value of the <aref>aria-owns</aref> <a>attribute</a> is a space-separated list o
 					<tr>
 						<th class="property-value-head" scope="row">Value:</th>
 						<td class="property-value"><a href="#valuetype_idref_list">ID reference list</a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<hr/>
+		<div class="property" id="aria-placeholder">
+			<pdef>aria-placeholder</pdef>
+			<div class="property-description">
+				<p>[ARIA 1.1] Represents a short hint (a word or short phrase) intended to aid the user with data entry when the control has no value. A hint could be a sample value or a brief description of the expected format.</p>
+				<p>Authors SHOULD NOT use <aref>aria-placeholder</aref> instead of a label as their purposes are different: The label indicates what kind of information is expected. The placeholder text is a hint about the expected value. See related <pref>aria-labelledby</pref> and <pref>aria-label</pref>.</p>
+				<p>Authors SHOULD ensure the control is understandable without the placeholder text.</p>
+				<p>Authors SHOULD present this hint to the user by displaying the text inside a blank unfocused control.</p>
+				<p class="note">As is the case with the related <a href="http://www.w3.org/TR/html5/forms.html#attr-input-placeholder"><abbr title="Hypertext Markup Language">HTML</abbr><code>placeholder</code></a> attribute, use of placeholder text as a replacement for a displayed label can reduce the accessibility and usability of the control for a range of users including older users and users with cognitive, mobility, fine motor skill or vision impairments. While the hint given by the control's label is shown at all times, the short hint given in the placeholder attribute is only shown before the user enters a value. Furthermore, placeholder text may be mistaken for a pre-filled value, and as commonly implemented the default color of the placeholder text provides insufficient contrast and the lack of a separate visible label reduces the size of the hit region available for setting focus on the control.</p>
+				<pre class="example highlight">
+				  &lt;span id="label"&gt;Search orders:&lt;/span&gt;
+				  &lt;div role="searchbox" aria-labelledby="label" <strong>aria-placeholder="Title, Department, Recipient..."</strong>&gt;Title, Department, Recipient...&lt;/div&gt;
+				</pre>
+			</div>
+			<table class="property-features">
+				<caption>Characteristics:</caption>
+				<thead>
+					<tr>
+						<th scope="col">Characteristic</th>
+						<th scope="col">Value</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th class="property-related-head" scope="row">Related Concepts:</th>
+						<td class="property-related"><a href="http://www.w3.org/TR/html5/forms.html#attr-input-placeholder"><abbr title="Hypertext Markup Language">HTML</abbr><code>placeholder</code></a></td>
+					</tr>
+					<tr>
+						<th class="property-applicability-head" scope="row">Used in Roles:</th>
+						<td class="property-applicability">Placeholder</td>
+					</tr>
+					<tr>
+						<th class="property-descendants-head" scope="row">Inherits into Roles:</th>
+						<td class="property-descendants">Placeholder</td>
+					</tr>
+					<tr>
+						<th class="property-value-head" scope="row">Value:</th>
+						<td class="property-value"><a href="#valuetype_string">string</a></td>
 					</tr>
 				</tbody>
 			</table>
